# f2pyfoil

./: OPER_Test.py  OPER_data.py  README.md  meson.build  pyproject.toml  test.py  test_data.db  test_data.py
src/: BLPAR.INC  CIRCLE.INC  CPCOR.INC  MATH.INC  QUIET.INC  XBL.INC  XFOIL.INC  api.f  cst.f  naca.f  osmap.f  osmap_DP.f  parsec.f  spline.f  userio.f  xbl.f  xblsys.f  xfoil.f  xgdes.f  xgeom.f  xmdes.f  xoper.f  xpanel.f  xpanel_new.f  xpanel_old.f  xqdes.f  xsolve.f  xutils.f
testing/: test.py
